--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   ],
   "author": "alexgaoyh",
   "dependencies": {
+    "element-ui": "^2.4.0",
+    "style-loader": "^0.19.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.2.2",
+    "file-loader": "^1.1.11",
     "live-server": "^1.2.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
