--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "element-ui": "^2.4.0",
     "style-loader": "^0.19.1",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuejs-datepicker": "^1.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
