--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.4.0",
     "style-loader": "^0.19.1",
     "vue": "^2.5.2",
+    "vue-js-modal": "^1.3.15",
     "vuejs-datepicker": "^1.3.2"
   },
   "devDependencies": {
@@ -55,7 +56,7 @@
     "vue-template-compiler": "^2.4.4",
     "vue-webpack-loaders": "^1.0.6",
     "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^4.1.0"
   }
 }
