--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "style-loader": "^0.19.1",
     "vue": "^2.5.2",
     "vue-js-modal": "^1.3.15",
+    "vue-table-with-tree-grid": "^0.2.4",
     "vuejs-datepicker": "^1.3.2"
   },
   "devDependencies": {
